@@ -1,5 +1,0 @@
-#include "followset.ih"
-
-FollowSet::() const
-{
-}
